Completed hero section

--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="UTF-8"/>
     <title>Busimetrics</title>
-    <link href="assets/style.css"rel="stylesheet"/>
-    <link href="assets/bulma.css"rel="stylesheet"/>
+    <link href="assets/bulma.css" rel="stylesheet"/>
+    <link href="assets/style.css" rel="stylesheet"/>
   </head>
   <body>
-    <nav class="navbar" role="navigation" aria-label="mainnavigation">
+    <nav class="navbar" role="navigation" aria-label="main navigation">
       
       <div class="navbar-brand">
-	<!--company logo goes here-->
-	<h1 class="title">Logo</h1>
+	 <a class="navbar-item" href="index.html">
+	   <img src="assets/logo.png" width="180">
+	 </a>
 	<a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbar-menu">
 	<span aria-hidden="true"></span>
 	<span aria-hidden="true"></span>
@@ -40,11 +41,12 @@
       </div>
     </nav>
 
-    <section class="hero is-primary is-bold">
+    <section class="hero">
       <div class="hero-body">
 	<div class="container has-text-centered">
-	  <h1 class="title">Busimetrics</h1>
-	  <h2 class="subtitle"></h2>
+	  <h1 class="title">Something something</h1>
+	  <h2 class="subtitle">Something something</h2>
+	  <button class="button is-link">Get an estimate</button>
 	</div>
       </div>
     </section>
