--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<a href="contact.html">Contact us</a>
       </div>
       <div class="navbar-item">
-	<a href="">Case studies</a>
+	<a href="case_studies.html">Case studies</a>
       </div>
       <div class="navbar-item">
 	<a href="blog_homepage.html">Blog</a>
